fix [display] overflow issue

--- a/src/index.scss
+++ b/src/index.scss
@@ -237,6 +237,7 @@ body {
     position: absolute;
     left: 0;
     right: 0;
+    overflow-x: hidden;
     // align-items: center;
   }
 
@@ -525,6 +526,7 @@ body {
     position: absolute;
     left: 0;
     right: 0;
+    overflow-x: hidden;
     // align-items: center;
   }
 
